# ForestZ

./: CMakeLists.txt  restes
configs/: resources.cfg
media/MySoldier/: Mesh.skeleton.xml  blender2ogre.material
media/animation/: Mesh.skeleton  Mesh.skeleton.xml  blender2ogre.material  blender2ogre.scene
media/models/: Examples.material  ground.material
media/soldier/: soldier.scene
media/test/: blender2ogre.scene
media/tree_1/: MT01_MatTreeF4_M6_P2.material
media/tree_2/: MT01_MatTreeF4_M5_P1.material  blender2ogre.scene
media/tree_3/: MT01_MatTreeF4_M6_P1.material
media/zombie_1/: ZombieGirl_Body.skeleton  blender2ogre.scene
src/dir/: BulletDebugDrawer.cpp  CameraManager.cpp  Crosshair.cpp  HUD.cpp  InputManager.cpp  LevelManager.cpp  Minimap.cpp  Object.cpp  PhysicsManager.cpp  Plane.cpp  Player.cpp  UIManager.cpp  WelcomePage.cpp  Zombies.cpp  forest.cpp  forest.cpp.bak  forest.hpp  forest_new.cpp  main.cpp
src/include/: BulletDebugDrawer.hpp  CameraManager.hpp  Crosshair.hpp  HUD.hpp  InputManager.hpp  LevelManager.hpp  Minimap.hpp  Object.hpp  PhysicsManager.hpp  Plane.hpp  Player.hpp  UIManager.hpp  WelcomePage.hpp  Zombies.hpp  forest.hpp  lib.hpp
